--- a/html-css/Exercicio/desafio/modulo 02/desafio16/estilo/style.css
+++ b/html-css/Exercicio/desafio/modulo 02/desafio16/estilo/style.css
@@ -9,12 +9,12 @@
 }
 
 :root{
-    --cor0: #c5ebd6;
-    --cor1: #4300D2;
-    --cor2: #ADEDDD;
-    --cor3: #DDD5F5;
-    --cor4: #270570;
-    --cor5: #E12B19
+    --cor0: #ebe5c5;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
 
     --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
     --fonte-destaque: 'Bebas Neue', cursive;
