--- a/html-css/Exercicio/desafios/modulo-02/d12/estilo/style.css
+++ b/html-css/Exercicio/desafios/modulo-02/d12/estilo/style.css
@@ -58,6 +58,10 @@ section{
     font-size: 3.5vw;
 }
 
+section > p{
+    padding-bottom: 1.5em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -66,12 +70,28 @@ section.normal{
 section.imagem{
     background-color: rgb(75, 74, 74);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.329);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.267);
+    background-color: rgba(0, 0, 0, 0.363);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+
 }
 
 footer{
